--- a/ContosoUniversity/Web.config
+++ b/ContosoUniversity/Web.config
@@ -69,7 +69,16 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <contexts>
+      <context type="ContosoUniversity.DAL.SchoolContext, ContosoUniversity">
+        <databaseInitializer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />
+      </context>
+    </contexts>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
