--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -159,6 +159,10 @@
     <Compile Include="Migrations\201709101711549_InitialCreate.Designer.cs">
       <DependentUpon>201709101711549_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709101817061_MaxLengthOnNames.cs" />
+    <Compile Include="Migrations\201709101817061_MaxLengthOnNames.Designer.cs">
+      <DependentUpon>201709101817061_MaxLengthOnNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Student.cs" />
@@ -237,6 +241,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201709101711549_InitialCreate.resx">
       <DependentUpon>201709101711549_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709101817061_MaxLengthOnNames.resx">
+      <DependentUpon>201709101817061_MaxLengthOnNames.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
