The Column Attribute

--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -163,6 +163,10 @@
     <Compile Include="Migrations\201709101817061_MaxLengthOnNames.Designer.cs">
       <DependentUpon>201709101817061_MaxLengthOnNames.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709101829246_ColumnFirstName.cs" />
+    <Compile Include="Migrations\201709101829246_ColumnFirstName.Designer.cs">
+      <DependentUpon>201709101829246_ColumnFirstName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Student.cs" />
@@ -244,6 +248,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709101817061_MaxLengthOnNames.resx">
       <DependentUpon>201709101817061_MaxLengthOnNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709101829246_ColumnFirstName.resx">
+      <DependentUpon>201709101829246_ColumnFirstName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
