--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -167,6 +167,10 @@
     <Compile Include="Migrations\201709101829246_ColumnFirstName.Designer.cs">
       <DependentUpon>201709101829246_ColumnFirstName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709101949430_ComplexDataModel.cs" />
+    <Compile Include="Migrations\201709101949430_ComplexDataModel.Designer.cs">
+      <DependentUpon>201709101949430_ComplexDataModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -254,6 +258,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709101829246_ColumnFirstName.resx">
       <DependentUpon>201709101829246_ColumnFirstName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709101949430_ComplexDataModel.resx">
+      <DependentUpon>201709101949430_ComplexDataModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
