--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -174,6 +174,10 @@
     <Compile Include="Migrations\201709101949430_ComplexDataModel.Designer.cs">
       <DependentUpon>201709101949430_ComplexDataModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709110952419_DepartmentSP.cs" />
+    <Compile Include="Migrations\201709110952419_DepartmentSP.Designer.cs">
+      <DependentUpon>201709110952419_DepartmentSP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -281,6 +285,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709101949430_ComplexDataModel.resx">
       <DependentUpon>201709101949430_ComplexDataModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709110952419_DepartmentSP.resx">
+      <DependentUpon>201709110952419_DepartmentSP.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
