--- a/ContosoUniversity/ContosoUniversity.csproj
+++ b/ContosoUniversity/ContosoUniversity.csproj
@@ -178,6 +178,10 @@
     <Compile Include="Migrations\201709110952419_DepartmentSP.Designer.cs">
       <DependentUpon>201709110952419_DepartmentSP.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709111215272_RowVersion.cs" />
+    <Compile Include="Migrations\201709111215272_RowVersion.Designer.cs">
+      <DependentUpon>201709111215272_RowVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -288,6 +292,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709110952419_DepartmentSP.resx">
       <DependentUpon>201709110952419_DepartmentSP.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709111215272_RowVersion.resx">
+      <DependentUpon>201709111215272_RowVersion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
